infrastructure/_overlays/dev/configurations/overrides/directory/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ui
  namespace: controller-directory
  annotations:
    external-dns.alpha.kubernetes.io/hostname: directory.internal.${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/target: internal.${cluster_name}.${base_domain}
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`directory.internal.${cluster_name}.${base_domain}`)
      kind: Rule
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: wildcard.${cluster_name}.${base_domain}.tls
